--- a/profile.html
+++ b/profile.html
@@ -91,14 +91,14 @@
 			<body>
 			
 			
-			<!-- <div class = log-history-container 
+			<div class = log-history-container 
 			style = "background-color: #F0EFFA50;
 			height: 343px;
 			width: 100%;
 			padding: 20px;
 			border-radius: 15px;
 			margin-bottom: 14px;
-			margin-top: -10px;"> -->
+			margin-top: -10px;">
 
 			<form autocomplete="off">
 			  <div class="autocomplete" style="width:382px;">
@@ -245,7 +245,7 @@
 				 
 			</div>
 		</div>
-	<!-- </div> -->
+	</div>
 		<label class = "summary" style="color: #9251F7;">🔥 You logged for 5 days in a row! Log now & keep streak.</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
