--- a/experiments.html
+++ b/experiments.html
@@ -71,7 +71,7 @@
 
 
 			<div class = "avatar" style = "top:8px; left:390px">
-				<img class="logo" src="clock2.png" width = "100px">
+				<img class="logo" src="clock.png" width = "100px">
 			</div>
         </div>
 
