--- a/profile.html
+++ b/profile.html
@@ -172,21 +172,21 @@
 				 <div class = "list" style = "overflow-y:scroll;height: 236px;margin-bottom: 19px;background-color: transparent;margin-top: -1px;">
 				   <label class = "title" style = "background-color: transparent;""></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
+				   <label id = "1" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px;">
 						September 1st 2021 
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				  <label id = "2" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">  
+				  <label id = "2" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">  
 						September 9th 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				  </label>
 			
-				   <label id = "3" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">
+				   <label id = "3" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
 						September 25th 2021  
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
@@ -194,49 +194,49 @@
 				 	</label>
 			
 				
-					 <label id = "4" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">
+					 <label id = "4" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
 						October 3rd 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 	</label>
 			
-				   <label id = "5" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">
+				   <label id = "5" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;  margin-bottom: 7px;">
 						October 12th 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 </label>
 			
-				 <label id = "6" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; "">
+				 <label id = "6" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;  margin-bottom: 7px;"">
 						October 20th 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 </label>
 			
-				 <label id = "7" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">
+				 <label id = "7" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
 						November 1st 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				<label id = "8" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">
+				<label id = "8" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
 						November 2nd 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				<label id = "9" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">
+				<label id = "9" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
 						November 3rd 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				<label id = "10" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">
+				<label id = "10" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;  margin-bottom: 7px;">
 						November 4th 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
