--- a/experiments.html
+++ b/experiments.html
@@ -26,7 +26,7 @@
 
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
-		<div id = "experiment-title" class = "title" style = "width:100%">Increasing sleep time</div>
+		<div id = "experiment-title" class = "title" style = "width:100%; color: #9251F7;">Increasing sleep time</div>
 		<br>
 		<br>
 		<br>
@@ -50,11 +50,11 @@
 	<div class = "contentwrap" id = tab2>
 
 		<div class = "wrapper" id = "goals" style = "top:-11px">
-        	<label class = "title">Experiment duration</label>
+        	<label class = "title" style="color: #f05c00;">Experiment duration</label>
 			<br>
 			<br>
 
-			<div class = "changer" style = "position:relative; left:10px">
+			<div class = "changer" style = "position:relative; left:150px">
 			<label class = "profilename" style = "font-size:31px">Run this experiment for</label>
 
 			<div class="field">
@@ -70,14 +70,14 @@
 		   </div>
 
 
-			<div class = "avatar" style = "top:8px; left:390px">
-				<img class="logo" src="clock.png" width = "100px">
+			<div class = "avatar" style = "top:8px; left:400px">
+				<img class="logo" src="clock.png" width = "110px">
 			</div>
         </div>
 
 
 		<div class = "wrapper" id = "goals" style = "top:16px">
-			<label class = "title">Set up experiment</label>
+			<label class = "title" style = "color: #019055">Set up experiment</label>
 			<br>
 			<br>
 			
