--- a/profile.html
+++ b/profile.html
@@ -95,14 +95,14 @@
 			style = "background-color: #F0EFFA50;
 			height: 343px;
 			width: 100%;
-			padding: 20px;
+			padding: 15px;
 			border-radius: 15px;
 			margin-bottom: 14px;
 			margin-top: -10px;">
 
 			<form autocomplete="off">
 			  <div class="autocomplete" style="width:382px;">
-				<input id="inputEntry" type="text" name="logHistory" placeholder="Search for entries by date (ex. 06/05/21)" style = "border:0.5px solid #9251F7;">
+				<input id="inputEntry" type="text" name="logHistory" placeholder="Search for entries by date (ex. 06/05/21)" style = "border:0.5px solid #dadada;">
 			  </div>
 			</form>
 			
@@ -172,21 +172,21 @@
 				 <div class = "list" style = "overflow-y:scroll;height: 236px;margin-bottom: 19px;background-color: transparent;margin-top: -1px;">
 				   <label class = "title" style = "background-color: transparent;""></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px;">
+				   <label id = "1" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						September 1st 2021 
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				  <label id = "2" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">  
+				  <label id = "2" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">  
 						September 9th 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				  </label>
 			
-				   <label id = "3" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
+				   <label id = "3" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						September 25th 2021  
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
@@ -194,49 +194,49 @@
 				 	</label>
 			
 				
-					 <label id = "4" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
+					 <label id = "4" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						October 3rd 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 	</label>
 			
-				   <label id = "5" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;  margin-bottom: 7px;">
+				   <label id = "5" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						October 12th 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 </label>
 			
-				 <label id = "6" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;  margin-bottom: 7px;"">
+				 <label id = "6" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						October 20th 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 </label>
 			
-				 <label id = "7" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
+				 <label id = "7" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						November 1st 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				<label id = "8" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
+				<label id = "8" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						November 2nd 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				<label id = "9" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; margin-bottom: 7px; ">
+				<label id = "9" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">
 						November 3rd 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				<label id = "10" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;  margin-bottom: 7px;">
+				<label id = "10" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						November 4th 2021
 						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
@@ -285,21 +285,21 @@
 
 			<div class = "goalstab" style = "margin-top: -19px;">
 				<div class = "mini"  style = "text-align: left;">
-					<img class="pic" src="headache.png" width="40px" height="40px">
+					<img class="pic" src="sleep1.png" width="30px" height="30px">
 					<label class = "summary">
 						Headaches are most associated with poor focus
 					</label>
 			    </div>
 
 				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="nausea1.png" width="40px" height="40px">
+					<img class="pic" src="sleep1.png" width="30px" height="30px">
 					<label class = "summary">
 						Nausea is most associated with flu symptoms 
 					</label>
 			   </div>
 
 				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="stress.png" width="40px" height="40px">
+					<img class="pic" src="sleep1.png" width="30px" height="30px">
 					<label class = "summary">
 						Stress is most associated with eye pain
 					</label>
