--- a/profile.html
+++ b/profile.html
@@ -247,7 +247,7 @@
 		</div>
 	</div>
 		<label class = "summary" style="color: #9251F7;">🔥 You logged for 5 days in a row! Log now & keep streak.</label>
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add a new entry</a><br/>
 
 		<!-- <div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
