--- a/profile.html
+++ b/profile.html
@@ -264,7 +264,7 @@
 			<br>
 			<div class="empty-insight-history" id="empty-div" style = "height:158px; display:block;">
 				<div class="emptyemoji" style = "padding: 9px;">👈🏼</div>
-				<div class="emptytext">Select one of these insights to view data</div>
+				<div class="emptytext">Select a log entry to view its details</div>
 			</div>
 			<div id = "entry-info" class = "symptoms-selected-div-block" style = "display:none;">
 				<p id = "entry-info-text" class = "symptoms-selected-text test"> </p>
