--- a/profile.html
+++ b/profile.html
@@ -246,12 +246,17 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color: #9251F7;">🔥 You logged for 5 days in a row! Log now & keep streak.</label>
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add a new entry</a><br/>
+		<label class = "summary" style="color: orange">You logged for 5 days in a row! Keep it up!</label>
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
 
-		<!-- <div class = "avatar">
-			<img class="logo" src="1.png" width = "200px">
-		</div> -->
+
+		<div class = "avatar" style = "top:200px; left:-200px">
+			<img class="logo" src="fire.gif.png" width = "50px">
+		</div> 
+
+		<div class = "avatar" style = "top:200px; left:-200px">
+			<img class="logo" src="fire.gif.png" width = "50px">
+		</div> 
 	</div>
 
 	
