--- a/profile.html
+++ b/profile.html
@@ -251,11 +251,11 @@
 
 
 		<div class = "avatar" style = "top:200px; left:-200px">
-			<img class="logo" src="fire.gif.png" width = "50px">
+			<img class="logo" src="fire.gif" width = "50px">
 		</div> 
 
 		<div class = "avatar" style = "top:200px; left:-200px">
-			<img class="logo" src="fire.gif.png" width = "50px">
+			<img class="logo" src="fire.gif" width = "50px">
 		</div> 
 	</div>
 
