--- a/profile.html
+++ b/profile.html
@@ -92,7 +92,7 @@
 			
 			
 			<div class = log-history-container 
-			style = "background-color: #F0EFFA50;
+			style = "background-color: rgb(128, 128, 128);
 			height: 343px;
 			width: 100%;
 			padding: 15px;
@@ -246,7 +246,7 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color:orange; position:relative; left:30px; font-size:20px;">You logged for 5 days in a row! Keep it up!</label>
+		<label class = "summary" style="color:orange; position:relative; left:30px; font-size:18px;">You logged for 5 days in a row! Keep it up!</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
 
 
@@ -254,7 +254,7 @@
 			<img class="logo" src="fire.gif" width = "50px">
 		</div> 
 
-		<div class = "avatar" style = "top:500px; left:200px">
+		<div class = "avatar" style = "top:500px; left:400px">
 			<img class="logo" src="fire.gif" width = "50px">
 		</div> 
 	</div>
@@ -313,10 +313,6 @@
 			
 
 			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">View more insights</a><br/>
-
-<!-- 			<div class = "avatar" style = "left:450px; top:10px">
-				<img class="logo" src="magnifying-glass.png" width = "70px">
-			</div> -->
 		</div>
 	</div>
 </div>
