--- a/profile.html
+++ b/profile.html
@@ -174,21 +174,21 @@
 			
 				   <label id = "1" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						September 1st 2021 
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				</label>
 			
 				  <label id = "2" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">  
 						September 9th 2021
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				  </label>
 			
 				   <label id = "3" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						September 25th 2021  
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				 	</label>
@@ -196,49 +196,49 @@
 				
 					 <label id = "4" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						October 3rd 2021
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				 	</label>
 			
 				   <label id = "5" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						October 12th 2021
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				 </label>
 			
 				 <label id = "6" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						October 20th 2021
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				 </label>
 			
 				 <label id = "7" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						November 1st 2021
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				</label>
 			
 				<label id = "8" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						November 2nd 2021
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				</label>
 			
 				<label id = "9" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center; ">
 						November 3rd 2021
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				</label>
 			
 				<label id = "10" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						November 4th 2021
-						<label class = "type-of-log" style = "margin-left: 0px;">
+						<label class = "type-of-log" style = "margin-left: 0px; margin-bottom:5px">
 							physical
 						</label>
 				</label>
@@ -254,7 +254,7 @@
 			<img class="logo" src="fire.gif" width = "50px">
 		</div> 
 
-		<div class = "avatar" style = "top:500px; left:455px">
+		<div class = "avatar" style = "top:500px; left:460px">
 			<img class="logo" src="fire.gif" width = "50px">
 		</div> 
 	</div>
