--- a/profile.html
+++ b/profile.html
@@ -166,7 +166,7 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field" style = "background-color: transparent;">
-			<label class = "summary" style = "color:rgb(188, 212, 80)">Click on a date below to see recent entry information</label>
+			<label class = "summary" style = "size:12px; color:rgb(188, 212, 80)">Click on a date below to see recent entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 256px;margin-bottom: 19px;background-color: transparent;margin-top: -1px;">
