--- a/profile.html
+++ b/profile.html
@@ -102,7 +102,7 @@
 
 			<form autocomplete="off">
 			  <div class="autocomplete" style="width:382px;">
-				<input id="inputEntry" type="text" name="logHistory" placeholder="Search for entries by date (ex. 06/05/21)" style = "border:0.5px solid #dadada;">
+				<input id="inputEntry" type="text" name="logHistory" placeholder="Search for any entry by date (ex. 06/05/21)" style = "border:0.5px solid #dadada;">
 			  </div>
 			</form>
 			
@@ -166,7 +166,6 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field" style = "background-color: transparent;">
-			<label class = "summary" style = "size:12px; color:rgb(188, 212, 80)">Click on a date below to see recent entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 256px;margin-bottom: 19px;background-color: transparent;margin-top: -1px;">
