--- a/profile.html
+++ b/profile.html
@@ -246,7 +246,7 @@
 		</div>
 	</div>
 		<label class = "summary" style="color:orange; position:relative; top:13px; left:29.5px; font-size:19px;">You logged for 5 days in a row! Keep it up!</label>
-		<a class= "gradient-button gradient-button-2" location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
+		<a class= "gradient-button gradient-button-2" location.href='import/physical-checkup.html'; id="log">Log your symptoms</a><br/>
 
 
 		<div class = "avatar" style = "top:500px; left:10px">
