--- a/profile.html
+++ b/profile.html
@@ -385,7 +385,7 @@
 		function select(val)
 	   {
 			var entryInfo = document.getElementById("entry-info-text");
-			entryInfo.innerHTML = entryContent[val - 1];
+			entryInfo.innerHTML = entryContent[(entryContent.length - 1) - val];
 			
 			entryInfo.classList.remove("test");
 
