--- a/profile.html
+++ b/profile.html
@@ -169,7 +169,7 @@
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 256px;margin-bottom: 19px;background-color: transparent;margin-top: -1px;">
-				   <label class = "title" style = "background-color: transparent;""></label>
+				   <label class = "title" style = "background-color: transparent;"></label>
 			
 				   <label id = "1" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;">
 						November 4th 2021 
@@ -245,7 +245,7 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color:orange; position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 5 days in a row! Keep it up!</label>
+		<label class = "summary" style="color:orange; position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 4 days in a row! Keep it up!</label>
 		<a class= "gradient-button gradient-button-2" location.href='import/physical-checkup.html'; id="log">Log your symptoms</a><br/>
 
 
@@ -358,18 +358,18 @@
 		var id = 0;
 
 		var entryContent = [
-				"Reported: headaches, depression and difficulty focusing",
+				"headaches, depression and difficulty focusing",
 				"head: pain (8)",
  				"mental: sleep (10)",
- 				"Reported: nausea and flu symptoms <br> nauea <br>",
-				"Reported: headaches and difficulty focusing",
-				"Reported: stomachache, nausea and flu symptoms",
-				"Reported: weakness and achiness",
-				"Reported: difficulty breathing",
-				"Reported: depression and anxiety",
-				"Reported: depression and anxiety",
-				"Reported: depression",
-				"Reported: weakness"
+ 				"nausea and flu symptoms <br> nauea <br>",
+				"headaches and difficulty focusing",
+				"stomachache, nausea and flu symptoms",
+				"weakness and achiness",
+				"difficulty breathing",
+				"depression and anxiety",
+				"depression and anxiety",
+				"depression",
+				"weakness"
 			];
 
 
