--- a/profile.html
+++ b/profile.html
@@ -409,7 +409,7 @@
 		function select(val)
 	   {
 			var entryInfo = document.getElementById("entry-info-text");
-			entryInfo.innerHTML = entryContent[(entryContent.length) - 1 - val];
+			entryInfo.innerHTML = entryContent[(entryContent.length - 1) - val];
 			
 			entryInfo.classList.remove("test");
 
