--- a/insight.html
+++ b/insight.html
@@ -284,7 +284,10 @@
 
 	 function disclaimer()
 	 {
-		 alert("A friendly reminder: correlations do not implicate causation. Be sure to check with your doctor for more details regarding your symptoms.");
+		if (!sessionStorage.getItem('firstVisit') === "1")
+			alert("A friendly reminder: correlations do not implicate causation. Be sure to check with your doctor for more details regarding your symptoms.");
+			
+		sessionStorage.setItem('firstVisit', '1');
 	 }
 
 	 window.onload = disclaimer;
