--- a/insight.html
+++ b/insight.html
@@ -13,7 +13,7 @@
 
 <div class="message">
     <div class="message_pad">
-        <div id="message"></div>
+        <div id="message">hi</div>
         <div class="message_leave">
 
         </div>
