--- a/insight.html
+++ b/insight.html
@@ -288,7 +288,7 @@
 		 alert("A friendly reminder: correlations do not implicate causation. Be sure to check with your doctor for more details regarding your symptoms.");
 	 }
 
-	 window.onload = disclaimer();
+	 window.onload = disclaimer;
    
 
     </script>
