--- a/insight.html
+++ b/insight.html
@@ -139,7 +139,7 @@
 				<div class = "icon"><img src="goals.png" width = "30px" ></div>
 				<label>Goals</label>
 			</div>
-			<div class="buttonactive" onclick = "location.href='insight.html';">
+			<div class="buttonactive">
 				<div class = "icon"><img src="insight.png" width = "30px"></div>
 				<label>Insight</label>
 			</div>
