--- a/profile.html
+++ b/profile.html
@@ -85,6 +85,11 @@
 			  border-bottom: 1px solid #d4d4d4; 
 			}
 			
+			/*when navigating through the items using the arrow keys:*/
+			.autocomplete-active {
+  			background-color: DodgerBlue !important; 
+  			color: #ffffff; 
+			}
 			
 			</style>
 			</head>     
@@ -164,7 +169,7 @@
     				}
   				}
 			  
-				  
+
 			
 			  function closeAllLists(elmnt) {
 				/*close all autocomplete lists in the document,
