--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Nov 26 2021 05:49:03 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 27 2021 04:23:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="619c3dfcf650fa45d6c3915b" data-wf-site="6199562479ca2ddc30e8e28f">
 <head>
   <meta charset="utf-8">
@@ -47,8 +47,8 @@
 </style>
   </div>
   <div class="w-layout-grid grid">
-    <a id="w-node-fe5eefe5-dd2c-9c07-4446-6712ec17b124-d6c3915b" data-w-id="fe5eefe5-dd2c-9c07-4446-6712ec17b124" href="#" class="help-text-symptom w-inline-block"><img src="images/info-button.png" loading="lazy" width="15" height="15" alt="">
-      <div class="info-text-symptom">10 = most severe</div>
+    <a id="w-node-fe5eefe5-dd2c-9c07-4446-6712ec17b124-d6c3915b" data-w-id="fe5eefe5-dd2c-9c07-4446-6712ec17b124" href="#" class="help-text-symptom physical w-inline-block"><img src="images/info-button.png" loading="lazy" width="15" height="15" alt="">
+      <div class="info-text-symptom">0 = absence (or best possible intensity)<br>10 = worst possible severity</div>
     </a>
     <div id="w-node-af6b3c05-1a56-9997-e00c-ca32e613edb1-d6c3915b" class="page-title-wrapper">
       <h1 class="heading">Physical Well Being Checkup</h1>
@@ -3126,18 +3126,18 @@
         <p id="w-node-_9bb44174-3cc7-0429-ac89-60fd407a3727-d6c3915b" data-w-id="9bb44174-3cc7-0429-ac89-60fd407a3727" class="symptoms-selected-text test"></p>
       </div>
       <div class="start-over-submit">
-        <a href="physical-checkup.html" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
+        <a href="physical-checkup.html" aria-current="page" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
-        <a href="#" class="submit-entry-button w-button">Submit entry</a>
+        <a data-w-id="71f674a9-3347-2c92-01a2-fc30f1022a05" href="#" class="submit-entry-button w-button">Submit entry</a>
       </div>
     </div>
     <div id="w-node-_89a1d9bb-f3b4-f8bd-1ad6-67033c7daaef-d6c3915b" class="nav-wrapper">
       <a href="../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Home</div>
       </a>
-     <a href="physical-checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
+     <a href="checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
         <div class="tab-label">Checkup</div>
       </a>
       <a href="../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
@@ -3149,6 +3149,40 @@
       <a href="../profile.html" class="nav-buttons w-inline-block last"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Log History</div>
       </a>
+    </div>
+  </div>
+  <a href="#" class="shade-bg w-inline-block"></a>
+  <div class="confirmation-div popup">
+    <div class="popup-title">
+      <h1 class="popup-success-message">Success</h1>
+      <h1 class="popup-widget-title-text">Your entry was successfully <br>added to your log</h1>
+    </div>
+    <div class="get-help">
+      <div class="location-to-get-help">
+        <h1 class="popup-success-message">Need medical advice?</h1>
+        <a href="#" class="get-directions non-urgent w-inline-block"><img src="images/phone-plus.svg" loading="lazy" alt="" class="popup-icon">
+          <div class="text-block-7">Call your doctor</div>
+        </a>
+        <a href="#" class="call-doctor non-urgent w-inline-block"><img src="images/directions.svg" loading="lazy" alt="" class="popup-icon">
+          <div class="text-block-7">Directions to your clinic</div>
+        </a>
+      </div>
+      <div class="location-to-get-help emergency">
+        <h1 class="popup-success-message emergengy">Need urgent help?</h1>
+        <a href="#" class="get-directions w-inline-block"><img src="images/ambulance.svg" loading="lazy" alt="" class="popup-icon red">
+          <div class="text-block-7">Call 911 for ambulance</div>
+        </a>
+        <a href="#" class="go-to-hostpial w-inline-block"><img src="images/directions.svg" loading="lazy" alt="" class="popup-icon red">
+          <div class="text-block-7">Directions to hospital</div>
+        </a>
+      </div>
+    </div>
+    <div class="cta-block-popup">
+      <a href="index.html" aria-current="page" class="cta1-popup w-inline-block w--current">
+        <div class="delete-entry-text">View log history</div>
+      </a>
+      <link rel="prefetch" href="/">
+      <a href="#" class="cta2-popup w-button">Go to homepage</a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6199562479ca2ddc30e8e28f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
