--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div class = contentwrap>
-	<div class = "wrapper" id = "checkup" style = "background-color:rgb(244, 254, 255)">
+	<div class = "wrapper" id = "checkup" style = "background-color:rgb(255, 255, 255)">
 		<label class = "profilename" style="color: #9251F7;">Log history</label>
 		<label class = "title" width="100%">View all your log entries</label>
 		<br>
@@ -277,7 +277,7 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color:orange; position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 4 days in a row! Keep it up!</label>
+		<label class = "summary" style="color:rgb(253, 167, 8); position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 4 days in a row! Keep it up!</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
 
 
