--- a/profile.html
+++ b/profile.html
@@ -321,21 +321,21 @@
 
 			<div class = "goalstab" style = "margin-top: -19px;">
 				<div class = "mini"  style = "text-align: left;">
-					<img class="pic" src="sleep1.png" width="30px" height="30px">
+					<img class="pic" src="headache.png" width="30px" height="30px">
 					<label class = "summary">
 						Headaches are most associated with poor focus
 					</label>
 			    </div>
 
 				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="sleep1.png" width="30px" height="30px">
+					<img class="pic" src="nausea1.png" width="30px" height="30px">
 					<label class = "summary">
 						Nausea is most associated with flu symptoms 
 					</label>
 			   </div>
 
 				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="sleep1.png" width="30px" height="30px">
+					<img class="pic" src="stress.png" width="30px" height="30px">
 					<label class = "summary">
 						Stress is most associated with burnout
 					</label>
