--- a/homepage.html
+++ b/homepage.html
@@ -81,7 +81,7 @@
 			</div>
 		</div>
 		
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/checkup.html';" id="log">Log your symptoms</a><br/>
 
 		<div class = "avatar">
 			<img class="logo" src="avatar.png" width = "120px">
@@ -169,7 +169,7 @@
 				<div class = "icon"><img src="home.png" width = "30px"></div>
 				<label>Home</label>
 		    </div>
-			<div class="button" onclick = "location.href='import/physical-checkup.html';">
+			<div class="button" onclick = "location.href='import/checkup.html';">
 				<div class = "icon"><img src="checkup.png" width = "30px"></div>
 				<label>Checkup</label>
 			</div>
