--- a/loghistory.html
+++ b/loghistory.html
@@ -160,7 +160,7 @@ autocomplete(document.getElementById("inputEntry"), entries);
 </body>
 </html>
 		
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/checkup.html';" id="log">Add new entry</a><br/>
 
 		<!-- <div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
@@ -214,7 +214,7 @@ autocomplete(document.getElementById("inputEntry"), entries);
 				<div class = "icon"><img src="home.png" width = "30px"></div>
 				<label>Home</label>
 		    </div>
-			<div class="button" onclick = "location.href='import/physical-checkup.html';">
+			<div class="button" onclick = "location.href='import/checkup.html';">
 				<div class = "icon"><img src="checkup.png" width = "30px"></div>
 				<label>Checkup</label>
 			</div>
