--- a/profile.html
+++ b/profile.html
@@ -277,7 +277,7 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color:rgb(253, 167, 8); position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 4 days in a row! Keep it up!</label>
+		<label class = "summary" style="color:f05c00; position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 4 days in a row! Keep it up!</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
 
 
