--- a/import/checkup.html
+++ b/import/checkup.html
@@ -53,13 +53,13 @@
       <h1 class="heading">Choose checkup type</h1>
     </div>
     <div id="w-node-af6b3c05-1a56-9997-e00c-ca32e613edb2-73d8d016" class="profile-wrapper"><img src="images/matthew-p-500.png" loading="lazy" width="60" sizes="60px" srcset="images/matthew-p-500-p-500.png 500w, images/matthew-p-500.png 775w" alt="" class="image"></div>
-    <a href="index.html" class="choose-physical long w-inline-block">
+    <a href="physical-checkup.html" class="choose-physical long w-inline-block">
       <div class="physcal-choose-direction"><img src="images/human.svg" loading="lazy" width="100" alt="" class="image-11">
         <h1 class="choose-physical-symptoms-text">Physical <br>Wellbeing Checkup</h1>
       </div>
       <h1 class="choose-emoji emoji peron choose">🧍🏽</h1>
     </a>
-    <a id="w-node-_4210e25a-146e-6e25-70c3-66cb310fcb09-73d8d016" href="mental-wellbeing-checkup.html" class="choose-mental long w-inline-block">
+    <a id="w-node-_4210e25a-146e-6e25-70c3-66cb310fcb09-73d8d016" href="mental-checkup.html" class="choose-mental long w-inline-block">
       <div class="mental-choose-direction"><img src="images/head-snowflake.svg" loading="lazy" width="100" alt="" class="image-12">
         <h1 class="choose-physical-symptoms-text">Mental <br>Wellbeing Checkup</h1>
       </div>
