--- a/profile.html
+++ b/profile.html
@@ -277,7 +277,7 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color:f05c00; position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 4 days in a row! Keep it up!</label>
+		<label class = "summary" style="color:rgb(241, 93, 7); position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 4 days in a row! Keep it up!</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
 
 
@@ -321,21 +321,21 @@
 
 			<div class = "goalstab" style = "margin-top: -19px;">
 				<div class = "mini"  style = "text-align: left;">
-					<img class="pic" src="headache.png" width="30px" height="30px">
+					<img class="pic" src="headache.png" width="35px" height="35px">
 					<label class = "summary">
 						Headaches are most associated with poor focus
 					</label>
 			    </div>
 
 				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="nausea1.png" width="30px" height="30px">
+					<img class="pic" src="nausea1.png" width="35px" height="35px">
 					<label class = "summary">
 						Nausea is most associated with flu symptoms 
 					</label>
 			   </div>
 
 				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="stress.png" width="30px" height="30px">
+					<img class="pic" src="stress.png" width="35px" height="35px">
 					<label class = "summary">
 						Stress is most associated with burnout
 					</label>
