--- a/import/mental-checkup.html
+++ b/import/mental-checkup.html
@@ -367,7 +367,7 @@
         <p id="w-node-_9bb44174-3cc7-0429-ac89-60fd407a3727-69fc2335" data-w-id="9bb44174-3cc7-0429-ac89-60fd407a3727" class="symptoms-selected-text test"></p>
       </div>
       <div class="start-over-submit">
-        <a href="mental-wellbeing-checkup.html" class="delete w-inline-block"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
+        <a href="mental-checkup.html" class="delete w-inline-block"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
@@ -419,11 +419,11 @@
       </div>
     </div>
     <div class="cta-block-popup">
-      <a href="index.html" class="cta1-popup w-inline-block">
+      <a href="../profile.html" class="cta1-popup w-inline-block">
         <div class="delete-entry-text">View log history</div>
       </a>
       <link rel="prefetch" href="/">
-      <a href="#" class="cta2-popup w-button">Go to homepage</a>
+      <a href="../homepage.html" class="cta2-popup w-button">Go to homepage</a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6199562479ca2ddc30e8e28f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
