--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -3177,14 +3177,15 @@
         </a>
       </div>
     </div>
+    
     <div class="cta-block-popup">
-      <a href="index.html" aria-current="page" class="cta1-popup w-inline-block w--current">
+      <a href="../profile.html" class="cta1-popup w-inline-block">
         <div class="delete-entry-text">View log history</div>
       </a>
       <link rel="prefetch" href="/">
-      <a href="#" class="cta2-popup w-button">Go to homepage</a>
+      <a href="../homepage.html" class="cta2-popup w-button">Go to homepage</a>
     </div>
-  </div>
+
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6199562479ca2ddc30e8e28f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
