--- a/import/mental-checkup.html
+++ b/import/mental-checkup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Nov 27 2021 04:23:28 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 27 2021 04:53:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61a098d62db58b1269fc2335" data-wf-site="6199562479ca2ddc30e8e28f">
 <head>
   <meta charset="utf-8">
@@ -367,7 +367,7 @@
         <p id="w-node-_9bb44174-3cc7-0429-ac89-60fd407a3727-69fc2335" data-w-id="9bb44174-3cc7-0429-ac89-60fd407a3727" class="symptoms-selected-text test"></p>
       </div>
       <div class="start-over-submit">
-        <a href="mental-checkup.html" class="delete w-inline-block"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
+        <a href="index.html" class="delete w-inline-block"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
@@ -392,7 +392,7 @@
       </a>
     </div>
   </div>
-  <a href="#" class="shade-bg w-inline-block"></a>
+  <div class="shade-bg"></div>
   <div class="confirmation-div popup">
     <div class="popup-title">
       <h1 class="popup-success-message">Success</h1>
@@ -418,6 +418,7 @@
         </a>
       </div>
     </div>
+
     <div class="cta-block-popup">
       <a href="../profile.html" class="cta1-popup w-inline-block">
         <div class="delete-entry-text">View log history</div>
@@ -425,6 +426,8 @@
       <link rel="prefetch" href="/">
       <a href="../homepage.html" class="cta2-popup w-button">Go to homepage</a>
     </div>
+    
+    <h1 data-w-id="6111e41c-ddf7-6d5e-9e31-bcb4986223fa" class="popup-success-message undo-go-back">Undo submission and go back to editing entry</h1>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6199562479ca2ddc30e8e28f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
