--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Nov 27 2021 04:23:28 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 27 2021 04:53:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="619c3dfcf650fa45d6c3915b" data-wf-site="6199562479ca2ddc30e8e28f">
 <head>
   <meta charset="utf-8">
@@ -3177,7 +3177,6 @@
         </a>
       </div>
     </div>
-    
     <div class="cta-block-popup">
       <a href="../profile.html" class="cta1-popup w-inline-block">
         <div class="delete-entry-text">View log history</div>
@@ -3185,7 +3184,8 @@
       <link rel="prefetch" href="/">
       <a href="../homepage.html" class="cta2-popup w-button">Go to homepage</a>
     </div>
-
+    <h1 data-w-id="a1b3d4d6-97ca-8e74-9dee-7eb30f3c2a97" class="popup-success-message undo-go-back">Undo submission and go back to editing entry</h1>
+  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6199562479ca2ddc30e8e28f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
