--- a/profile.html
+++ b/profile.html
@@ -390,15 +390,15 @@
 		var id = 0;
 
 		var entryContent = [
-				"head: ache (8) <br> body: sleepiness (10) <br> mental: overthinking (8)",
+				"head: ache (8) <br> body: sleepiness (10) <br> feeling: finding it difficult to focus (8)",
 				"body: nausea (9) <br> body: fever: (7)",
-				"head: throbbing pain (10) <br> mental: distracted (8)",
+				"head: throbbing pain (10) <br> mental: mind racing (8)",
 				"abdomen: stomach pain (6) <br> body: nausea (4) <br> body: fever (6)",
 				"body: muscle weakness (5) <br> body: mutliple stiff joints (7)",
 				"chest: trouble breathing (8)",
-				"body: inability to sleep (9) <br> body: fatigue (10) <br> mental: depression (6) <br> mental: anxious (6)",
-				"body: inability to sleep (8) <br> body: fatigue (9) <br> mental: depression (4)",
-				"body: sleepiness (8) <br> body: fatigue (8) <br> mental: depression (6)",
+				"feeling: stressed (7) <br> body: inability to sleep (9) <br> body: fatigue (10) <br> mental: decreased energy (6) <br> feeling: on edge (6)",
+				"feeling: stressed (8) <br> feeling: defeated (9) <br> feeling: appetite change (6)",
+				"feeling: stressed (5) <br> body: sleepiness (8) <br> feeling: restless (8) <br> feeling: sad (7)",
 				"body: muscle weakness (7)"
 			];
 
