--- a/import/mental-checkup.html
+++ b/import/mental-checkup.html
@@ -378,7 +378,7 @@
       <a href="../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Home</div>
       </a>
-     <a href="checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current" style = "background-color: #9251F7; color: white;">
+     <a href="checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current" style = "background-color: #9251F7; color: white;"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
         <div class="tab-label">Checkup</div>
       </a>
       <a href="../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
