--- a/insight.html
+++ b/insight.html
@@ -131,7 +131,7 @@
 				<div class = "icon"><img src="home.png" width = "30px"></div>
 				<label>Home</label>
 		    </div>
-			<div class="button" onclick = "location.href='import/physical-checkup.html';">
+			<div class="button" onclick = "location.href='import/checkup.html';">
 				<div class = "icon"><img src="checkup.png" width = "30px"></div>
 				<label>Checkup</label>
 			</div>
