--- a/profile.html
+++ b/profile.html
@@ -321,23 +321,23 @@
 
 			<div class = "goalstab" style = "margin-top: -19px;">
 				<div class = "mini"  style = "text-align: left">
-					<img class="pic" src="headache.png" width="35px" height="35px">
+					<img class="pic" src="headache.png" width="35px" height="35px" style="margin-bottom: 6px; margin-top: -5px;">
 					<label class = "summary">
-						Headaches are most associated with poor focus
+						Your poor focus is correlated with headaches
 					</label>
 			    </div>
 
 				<div class = "mini" style = "text-align: left">
-					<img class="pic" src="nausea1.png" width="35px" height="35px">
+					<img class="pic" src="nausea1.png" width="35px" height="35px" style="margin-bottom: 6px; margin-top: -5px;">
 					<label class = "summary">
-						Nausea is most associated with flu symptoms 
+						You've reported nausea 20% more this week
 					</label>
 			   </div>
 
 				<div class = "mini" style = "text-align: left">
-					<img class="pic" src="stress.png" width="35px" height="35px">
+					<img class="pic" src="stress.png" width="35px" height="35px" style="margin-bottom: 6px; margin-top: -5px;">
 					<label class = "summary">
-						Stress is most associated with burnout
+						Neck pain is correlated with stress
 					</label>
 			    </div>
 			</div>
