--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div class = contentwrap>
-	<div class = "wrapper" id = "checkup" style="background-color:rgb(255, 255, 255);margin-right: 23px;">
+	<div class = "wrapper" id = "checkup" style = "background-color:rgb(255, 255, 255)">
 		<label class = "profilename" style="color: #9251F7;">Log history</label>
 		<label class = "title" width="100%">View all your log entries</label>
 		<br>
@@ -183,9 +183,9 @@
 			"10/03/21 - stomachache, nausea and flu symptoms",
 			"10/12/21 - weakness, achiness", 
 			"10/20/21 - difficulty breathing", 
-			"11/01/21 - stress, burnout, anxiety", 
+			"11/01/21 - stress, neckpain, anxiety", 
 			"11/02/21 - stress", 
-			"11/03/21 - stress and burnout", 
+			"11/03/21 - stress and neckpain", 
 			"11/04/21 - weakness"
 		];
 			
@@ -305,12 +305,6 @@
 			<div id = "entry-info" class = "symptoms-selected-div-block" style = "display:none;">
 				<p id = "entry-info-text" class = "symptoms-selected-text test"> </p>
 			</div>
-
-
-			<!-- <div class = "avatar" style = "top:8px; left:330px">
-			<div class = "avatar" style = "top:8px; left:330px">
-				<img class="logo" src="3.png" width = "210px">
-			</div> -->
         </div>
 
 		<div class = "wrapper" id = "goals" style = "top:16px">
@@ -320,21 +314,21 @@
 			<br>
 
 			<div class = "goalstab" style = "margin-top: -19px;">
-				<div class = "mini"  style = "text-align: left; line-height: 21px;">
+				<div class = "mini"  style = "text-align: left; line-height:21px">
 					<img class="pic" src="headache.png" width="35px" height="35px" style="margin-bottom: 10px; margin-top: -1px;">
 					<label class = "summary">
 						Your poor focus is correlated with headaches
 					</label>
 			    </div>
 
-				<div class = "mini" style = "text-align: left; line-height: 21px;">
+				<div class = "mini" style = "text-align: left; line-height:21px">
 					<img class="pic" src="nausea1.png" width="35px" height="35px" style="margin-bottom: 10px; margin-top: -1px;">
 					<label class = "summary">
 						You've reported nausea 20% more this week
 					</label>
 			   </div>
 
-				<div class = "mini" style = "text-align: left; line-height: 21px;">
+				<div class = "mini" style = "text-align: left; line-height:21px">
 					<img class="pic" src="stress.png" width="35px" height="35px" style="margin-bottom: 10px; margin-top: -1px;">
 					<label class = "summary">
 						Neck pain is correlated with stress
@@ -396,9 +390,9 @@
 				"abdomen: stomach pain (6) <br> body: nausea (4) <br> body: fever (6)",
 				"body: muscle weakness (5) <br> body: mutliple stiff joints (7)",
 				"chest: trouble breathing (8)",
-				"feeling: stressed (7) <br> body: inability to sleep (9) <br> body: fatigue (10) <br> mental: decreased energy (6) <br> feeling: on edge (6)",
+				"feeling: stressed (7) <br> body: inability to sleep (9) <br> neck: pain (10) <br> mental: decreased energy (6) <br> feeling: on edge (6)",
 				"feeling: stressed (8) <br> feeling: defeated (9) <br> feeling: appetite change (6)",
-				"feeling: stressed (5) <br> body: sleepiness (8) <br> feeling: restless (8) <br> feeling: sad (7)",
+				"feeling: stressed (5) <br> neck: pain (8) <br> feeling: sad (7)",
 				"body: muscle weakness (7)"
 			];
 
