--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div class = contentwrap>
-	<div class = "wrapper" id = "checkup" style = "background-color:rgb(255, 255, 255)">
+	<div class = "wrapper" id = "checkup" style = "background-color:rgb(255, 255, 255); margin-right:23px">
 		<label class = "profilename" style="color: #9251F7;">Log history</label>
 		<label class = "title" width="100%">View all your log entries</label>
 		<br>
