removed light bulb for simplicity

--- a/insight.html
+++ b/insight.html
@@ -33,9 +33,9 @@
 	<div class = "wrapper" id = "checkup">
 		<label class = "title" style="color: #9251F7">Insights</label>
 		
-		<div class = "avatar2">
+		<!-- <div class = "avatar2">
 			<img class = "logo" src="light-bulb.png" width = "70px">
-		</div>
+		</div> -->
 		<br>
 		<br>
 		<br>
