--- a/insight.html
+++ b/insight.html
@@ -31,14 +31,14 @@
 	<div class = "contentwrap" id = "tab1">
 	<div class = "contentwrap">
 	<div class = "wrapper" id = "checkup">
-		<label class = "title" style="color: #9251F7">Insights</label>
+		<label class = "profilename" style="color: #9251F7;">Insights</label>
+		<label class = "title">This week's insights and correlations</label>
 		
 		<!-- <div class = "avatar2">
 			<img class = "logo" src="light-bulb.png" width = "70px">
 		</div> -->
 		<br>
-		<br>
-		<br>
+		<label class = "summary"  style= "margin-top: 5px;">View all the insights based on your log and the data from other apps you've allowed. Please remember, correlation does not imply causation.</label>
 		<br>
 		<br>
         <div class="insight" id ="in1" onclick="drawChart(this.id);select(this.id);">
